@@ -10,6 +10,7 @@
 - ASP.NET Core HTTP "in progress" metrics now include controller/action labels (ASP.NET Core 3 only).
 - Fixed concurrently defect in HTTP metrics that may have caused label values from wrong request to apply. #182
 - The HttpListener based MetricServer can now handle more than one concurrent request.
+- Added asynchronous "before collect" callbacks, giving user code more flexibility in metric updates.
 * 3.3.0
 - Add ability to filter requests by port number when exporting metrics. #160
 * 3.2.1
